--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <br>
                  <h3>معا كول طلب هدية هاتف honor x9b</h3>
                   <br>
-                  <img src="https://belltel-store.com/pub/media/catalog/product/cache/9a2222cd6768baad838f86173895cb5d/8/0/800_800_741670ca225e141d66d38bd20261cf9de8235a7f6ac9cda6.png" width="40%">
+                  <img src="https://belltel-store.com/pub/media/catalog/product/cache/9a2222cd6768baad838f86173895cb5d/8/0/800_800_741670ca225e141d66d38bd20261cf9de8235a7f6ac9cda6" width="40%">
                   <br>
                 </div>
         </div>
